--- a/reddit-browser/Base.lproj/Main.storyboard
+++ b/reddit-browser/Base.lproj/Main.storyboard
@@ -25,27 +25,27 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="post-cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="post-cell" rowHeight="212" id="Juh-I1-2cc" customClass="PostCell" customModule="reddit_browser" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="212"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="post-cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="post-cell" rowHeight="230" id="Juh-I1-2cc" customClass="PostCell" customModule="reddit_browser" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="230"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Juh-I1-2cc" id="B3c-yr-zae">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="211.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="229.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZCC-Pk-9Hc">
-                                                    <rect key="frame" x="15" y="39" width="56" height="15"/>
+                                                    <rect key="frame" x="15" y="39" width="56" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vy5-1O-w1Y">
-                                                    <rect key="frame" x="335" y="39" width="25" height="15"/>
+                                                    <rect key="frame" x="335" y="39" width="25" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tot-4o-odO">
-                                                    <rect key="frame" x="157.5" y="39" width="60" height="15"/>
+                                                    <rect key="frame" x="157.5" y="39" width="60" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jh6-dI-SkV">
-                                                    <rect key="frame" x="0.0" y="69" width="375" height="127.5"/>
+                                                    <rect key="frame" x="0.0" y="68.5" width="375" height="146"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -77,7 +77,7 @@
                                                 <constraint firstItem="Vy5-1O-w1Y" firstAttribute="trailing" secondItem="B3c-yr-zae" secondAttribute="trailingMargin" id="fxk-3h-bMe"/>
                                                 <constraint firstItem="Tot-4o-odO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZCC-Pk-9Hc" secondAttribute="trailing" id="h4J-04-YZZ"/>
                                                 <constraint firstItem="ZCC-Pk-9Hc" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leadingMargin" id="iHU-J0-Tyb"/>
-                                                <constraint firstAttribute="bottom" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="15" id="jdt-eV-dkD"/>
+                                                <constraint firstAttribute="bottom" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="15" id="jEp-sl-OhC"/>
                                                 <constraint firstItem="Jh6-dI-SkV" firstAttribute="top" secondItem="Vy5-1O-w1Y" secondAttribute="bottom" constant="15" id="ruD-YK-drc"/>
                                                 <constraint firstItem="Tot-4o-odO" firstAttribute="bottom" secondItem="ZCC-Pk-9Hc" secondAttribute="bottom" id="svt-cI-RnC"/>
                                                 <constraint firstAttribute="trailing" secondItem="Jh6-dI-SkV" secondAttribute="trailing" id="uR0-uJ-AUc"/>
@@ -115,6 +115,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53.600000000000001" y="26.53673163418291"/>
+        </scene>
+        <!--Post Detail View Controller-->
+        <scene sceneID="jll-dT-S4Y">
+            <objects>
+                <viewController storyboardIdentifier="post-detail-vc" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cU7-dv-n7Q" customClass="PostDetailViewController" customModule="reddit_browser" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bGV-sW-NMv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BHZ-Cs-lKc">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BHZ-Cs-lKc" firstAttribute="leading" secondItem="Kib-jV-tVW" secondAttribute="leading" id="E8q-DY-qJl"/>
+                            <constraint firstItem="Kib-jV-tVW" firstAttribute="trailing" secondItem="BHZ-Cs-lKc" secondAttribute="trailing" id="VHx-Ys-W0N"/>
+                            <constraint firstItem="Kib-jV-tVW" firstAttribute="bottom" secondItem="BHZ-Cs-lKc" secondAttribute="bottom" id="b4l-tu-cTx"/>
+                            <constraint firstItem="BHZ-Cs-lKc" firstAttribute="top" secondItem="Kib-jV-tVW" secondAttribute="top" id="b4y-ox-XME"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Kib-jV-tVW"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Vh-ZF-moH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1073" y="27"/>
         </scene>
     </scenes>
 </document>
