--- a/reddit-browser/Base.lproj/Main.storyboard
+++ b/reddit-browser/Base.lproj/Main.storyboard
@@ -124,23 +124,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BHZ-Cs-lKc">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BHZ-Cs-lKc">
+                                <rect key="frame" x="0.0" y="90" width="375" height="577"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mIX-aT-Qb7">
+                                <rect key="frame" x="315" y="40" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="O1v-oe-VBO"/>
+                                    <constraint firstAttribute="height" constant="40" id="aDX-qZ-iP7"/>
+                                </constraints>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="closePressed:" destination="cU7-dv-n7Q" eventType="touchUpInside" id="atW-Ia-KUB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="BHZ-Cs-lKc" firstAttribute="leading" secondItem="Kib-jV-tVW" secondAttribute="leading" id="E8q-DY-qJl"/>
+                            <constraint firstItem="Kib-jV-tVW" firstAttribute="trailing" secondItem="mIX-aT-Qb7" secondAttribute="trailing" constant="20" id="LeP-VH-wV6"/>
                             <constraint firstItem="Kib-jV-tVW" firstAttribute="trailing" secondItem="BHZ-Cs-lKc" secondAttribute="trailing" id="VHx-Ys-W0N"/>
+                            <constraint firstItem="mIX-aT-Qb7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Kib-jV-tVW" secondAttribute="leading" constant="10" id="VcL-lg-9Vv"/>
+                            <constraint firstItem="BHZ-Cs-lKc" firstAttribute="top" secondItem="mIX-aT-Qb7" secondAttribute="bottom" constant="10" id="XLM-ON-S63"/>
                             <constraint firstItem="Kib-jV-tVW" firstAttribute="bottom" secondItem="BHZ-Cs-lKc" secondAttribute="bottom" id="b4l-tu-cTx"/>
-                            <constraint firstItem="BHZ-Cs-lKc" firstAttribute="top" secondItem="Kib-jV-tVW" secondAttribute="top" id="b4y-ox-XME"/>
+                            <constraint firstItem="mIX-aT-Qb7" firstAttribute="top" secondItem="Kib-jV-tVW" secondAttribute="top" constant="20" id="kI5-QT-yaZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Kib-jV-tVW"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="BHZ-Cs-lKc" id="6gr-RE-NpQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Vh-ZF-moH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1073" y="27"/>
+            <point key="canvasLocation" x="1072.8" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
