--- a/reddit-browser/Base.lproj/Main.storyboard
+++ b/reddit-browser/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BHZ-Cs-lKc">
-                                <rect key="frame" x="0.0" y="90" width="375" height="577"/>
+                                <rect key="frame" x="0.0" y="90" width="375" height="547"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mIX-aT-Qb7">
                                 <rect key="frame" x="315" y="40" width="40" height="40"/>
@@ -146,7 +146,7 @@
                             <constraint firstItem="Kib-jV-tVW" firstAttribute="trailing" secondItem="BHZ-Cs-lKc" secondAttribute="trailing" id="VHx-Ys-W0N"/>
                             <constraint firstItem="mIX-aT-Qb7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Kib-jV-tVW" secondAttribute="leading" constant="10" id="VcL-lg-9Vv"/>
                             <constraint firstItem="BHZ-Cs-lKc" firstAttribute="top" secondItem="mIX-aT-Qb7" secondAttribute="bottom" constant="10" id="XLM-ON-S63"/>
-                            <constraint firstItem="Kib-jV-tVW" firstAttribute="bottom" secondItem="BHZ-Cs-lKc" secondAttribute="bottom" id="b4l-tu-cTx"/>
+                            <constraint firstItem="Kib-jV-tVW" firstAttribute="bottom" secondItem="BHZ-Cs-lKc" secondAttribute="bottom" constant="30" id="b4l-tu-cTx"/>
                             <constraint firstItem="mIX-aT-Qb7" firstAttribute="top" secondItem="Kib-jV-tVW" secondAttribute="top" constant="20" id="kI5-QT-yaZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Kib-jV-tVW"/>
