Moved preview image between title label and other labels

--- a/reddit-browser/Base.lproj/Main.storyboard
+++ b/reddit-browser/Base.lproj/Main.storyboard
@@ -32,20 +32,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="229.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZCC-Pk-9Hc">
-                                                    <rect key="frame" x="15" y="39" width="56" height="14.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vy5-1O-w1Y">
-                                                    <rect key="frame" x="335" y="39" width="25" height="14.5"/>
+                                                    <rect key="frame" x="335" y="205" width="25" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tot-4o-odO">
-                                                    <rect key="frame" x="157.5" y="39" width="60" height="14.5"/>
+                                                    <rect key="frame" x="157.5" y="205" width="60" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -57,31 +51,38 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jh6-dI-SkV">
-                                                    <rect key="frame" x="0.0" y="68.5" width="375" height="146"/>
+                                                    <rect key="frame" x="0.0" y="39" width="375" height="156"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="200" id="AUR-Qn-aZS"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZCC-Pk-9Hc">
+                                                    <rect key="frame" x="15" y="205" width="132.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Tot-4o-odO" firstAttribute="centerX" secondItem="B3c-yr-zae" secondAttribute="centerX" id="13r-9s-ZH7"/>
+                                                <constraint firstItem="ZCC-Pk-9Hc" firstAttribute="top" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="10" id="1vk-qm-cNA"/>
+                                                <constraint firstAttribute="bottom" secondItem="Tot-4o-odO" secondAttribute="bottom" constant="10" id="9NS-UP-3hc"/>
                                                 <constraint firstItem="q90-2L-jn9" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leadingMargin" id="Agt-Cg-nUo"/>
+                                                <constraint firstItem="Tot-4o-odO" firstAttribute="leading" secondItem="ZCC-Pk-9Hc" secondAttribute="trailing" constant="10" id="Fvv-ua-lnF"/>
                                                 <constraint firstItem="ZCC-Pk-9Hc" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leadingMargin" id="Haj-DK-9cY"/>
                                                 <constraint firstItem="Jh6-dI-SkV" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leading" id="NdR-EY-Mk4"/>
-                                                <constraint firstItem="Tot-4o-odO" firstAttribute="top" secondItem="q90-2L-jn9" secondAttribute="bottom" constant="10" id="ODb-dP-fB1"/>
-                                                <constraint firstItem="Vy5-1O-w1Y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Tot-4o-odO" secondAttribute="trailing" id="OXU-De-ijF"/>
-                                                <constraint firstItem="ZCC-Pk-9Hc" firstAttribute="top" secondItem="q90-2L-jn9" secondAttribute="bottom" constant="10" id="Qy1-nX-1x0"/>
-                                                <constraint firstItem="Jh6-dI-SkV" firstAttribute="top" secondItem="ZCC-Pk-9Hc" secondAttribute="bottom" constant="15" id="ZaG-IM-SCC"/>
+                                                <constraint firstItem="Tot-4o-odO" firstAttribute="top" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="10" id="Tla-W8-c6K"/>
+                                                <constraint firstAttribute="bottom" secondItem="Vy5-1O-w1Y" secondAttribute="bottom" constant="10" id="U05-Xh-dvB"/>
+                                                <constraint firstItem="Jh6-dI-SkV" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leading" id="Z6S-IE-Vwd"/>
                                                 <constraint firstItem="q90-2L-jn9" firstAttribute="top" secondItem="B3c-yr-zae" secondAttribute="topMargin" id="ZrG-hY-H4M"/>
-                                                <constraint firstItem="Jh6-dI-SkV" firstAttribute="top" secondItem="Tot-4o-odO" secondAttribute="bottom" constant="15" id="bOT-cQ-UZ4"/>
+                                                <constraint firstAttribute="trailing" secondItem="Jh6-dI-SkV" secondAttribute="trailing" id="av5-FY-LRS"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="q90-2L-jn9" secondAttribute="trailing" id="bWG-U5-cky"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Vy5-1O-w1Y" secondAttribute="trailing" id="dIL-X8-lOH"/>
-                                                <constraint firstItem="Vy5-1O-w1Y" firstAttribute="top" secondItem="q90-2L-jn9" secondAttribute="bottom" constant="10" id="eSa-Qo-Jhc"/>
                                                 <constraint firstItem="Vy5-1O-w1Y" firstAttribute="trailing" secondItem="B3c-yr-zae" secondAttribute="trailingMargin" id="fxk-3h-bMe"/>
-                                                <constraint firstItem="Tot-4o-odO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZCC-Pk-9Hc" secondAttribute="trailing" id="h4J-04-YZZ"/>
+                                                <constraint firstItem="Jh6-dI-SkV" firstAttribute="top" secondItem="q90-2L-jn9" secondAttribute="bottom" constant="10" id="i20-uC-itl"/>
                                                 <constraint firstItem="ZCC-Pk-9Hc" firstAttribute="leading" secondItem="B3c-yr-zae" secondAttribute="leadingMargin" id="iHU-J0-Tyb"/>
-                                                <constraint firstAttribute="bottom" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="15" id="jEp-sl-OhC"/>
-                                                <constraint firstItem="Jh6-dI-SkV" firstAttribute="top" secondItem="Vy5-1O-w1Y" secondAttribute="bottom" constant="15" id="ruD-YK-drc"/>
+                                                <constraint firstItem="Vy5-1O-w1Y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Tot-4o-odO" secondAttribute="trailing" constant="8" symbolic="YES" id="jBK-JO-1OF"/>
+                                                <constraint firstAttribute="bottom" secondItem="ZCC-Pk-9Hc" secondAttribute="bottom" constant="10" id="q9P-eE-dwG"/>
+                                                <constraint firstItem="Vy5-1O-w1Y" firstAttribute="top" secondItem="Jh6-dI-SkV" secondAttribute="bottom" constant="10" id="qhk-1l-tIO"/>
                                                 <constraint firstItem="Tot-4o-odO" firstAttribute="bottom" secondItem="ZCC-Pk-9Hc" secondAttribute="bottom" id="svt-cI-RnC"/>
                                                 <constraint firstAttribute="trailing" secondItem="Jh6-dI-SkV" secondAttribute="trailing" id="uR0-uJ-AUc"/>
                                                 <constraint firstItem="Vy5-1O-w1Y" firstAttribute="bottom" secondItem="ZCC-Pk-9Hc" secondAttribute="bottom" id="vEY-Bh-AVo"/>
